Fixed toolbar button padding and margins to align to classic Clearlooks and added missing style for toolbar separators.

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -699,6 +699,7 @@ toolbar button,
 toolbar.primary-toolbar button,
 toolbar.horizontal button:hover,
 toolbar.horizontal button:active {
+	padding: 4px 6px;
 }
 
 .path-bar button,
@@ -2108,15 +2109,23 @@ checkbutton:selected:focus {
 toolbar {
 	border-style: none;
 	border-color: darker (@theme_bg_color);
-	padding: 4px;
+	padding: 3px 0px 1px 2px;
 }
 
 toolbar button {
-	padding: 1px;
+	padding: 4px;
+	margin: 0px 1px 0px 1px;
 }
 
 toolbar:disabled {
 	color: alpha (@theme_fg_color, 0.6);
+}
+
+toolbar separator {
+	border-left: solid 1px #cccac7;
+	border-right: solid 1px white;
+	padding:0px;
+	margin: 6px 5px 7px 5px;
 }
 
 /********************
